# jumpcloud_sdet_assignment

./: BUGS.md  README.md  client.py  helpers.py  pyproject.toml
tests/: environment.py
tests/features/: hash.feature  shutdown.feature  stats.feature
tests/steps/: __init__.py  hash.py  shutdown.py  stats.py
