[tool.poetry]
name = "jumpcloud_sdet_assignment"
version = "0.1.0"
description = ""
authors = ["Ryan Casperson <casperson.ryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
behave = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
